# ttplib

./: .gitignore  README.md  pyproject.toml  test_ttplib.py
scripts/: copy_instances.py  generate_catalog.py  upload_to_huggingface.py
ttplib/: __init__.py  catalog.json  instance.py  remote.py
